--- a/Mockito/pom.xml
+++ b/Mockito/pom.xml
@@ -7,6 +7,16 @@
     <groupId>org.example</groupId>
     <artifactId>Mockito</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+
+
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.6.1</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 
 </project>
